Move JavaScript + CSS into the head element

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -26,7 +26,23 @@
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="{{site.url}}/assets/ico/apple-touch-icon-72x72-precomposed.png">
     <link rel="apple-touch-icon-precomposed" href="{{site.url}}/assets/ico/apple-touch-icon-57x57-precomposed.png">
     <style>
+      .hero-unit {
+          text-align: center;
+          padding: 20px;
+      }
+
+      h2,h3,h4 {
+          margin-top: 1em;
+      }
+
+      body {
+        padding-top: 60px;
+        padding-bottom: 40px;
+      }
+
     </style>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+    <script src="{{site.url}}/assets/js/bootstrap.js"></script>
   </head>
   <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
