--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,6 +9,7 @@
     <meta name="author" content="">
     <!-- Le styles -->
     <link href="{{site.url}}/assets/css/bootstrap.css" rel="stylesheet">
+    <link href="{{site.url}}/assets/css/k9mail.css" rel="stylesheet">
     <style>
       body { padding-top: 60px; /* 60px to make the container go all the way
       to the bottom of the topbar */ }
