--- a/assets/css/k9mail.css
+++ b/assets/css/k9mail.css
@@ -16,3 +16,27 @@
     line-height: 18px;
     padding: 5px 0;
 }
+table th, table td {
+    padding: 6px 13px;
+    border: 1px solid #ddd;
+}
+table th {
+    font-weight: bold;
+}
+table tr {
+    background-color: #fff;
+    border-top: 1px solid #ccc;
+}
+table tr:nth-child(2n) {
+    background-color: #f8f8f8;
+}
+table {
+    display: block;
+    width: 100%;
+    overflow: auto;
+    word-break: normal;
+    margin-top: 0;
+    margin-bottom: 16px;
+    border-collapse: collapse;
+    border-spacing: 0;
+}
