--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,6 +8,8 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <!-- Le styles -->
+    <link href="{{site.url}}/assets/css/bootstrap.css" rel="stylesheet">
+    <link href="{{site.url}}/assets/css/bootstrap-responsive.css" rel="stylesheet">
     <link rel="stylesheet" 
     	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" 
 	integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" 
