--- a/_includes/accounts-header.html
+++ b/_includes/accounts-header.html
@@ -2,7 +2,10 @@
 	<h5>Accounts</h5>
 	<ul class="submenu">
 		<li><a href="/documentation/accounts.html">Overview</a></li>
-		<li><a href="/documentation/accounts/add.html">Add</a></li>	
+		<li><a href="/documentation/accounts/add.html">Add</a></li>
+		<li><a href="/documentation/accounts/incoming_imap.html">IMAP Server Settings</a></li>
+		<li><a href="/documentation/accounts/incoming_pop3.html">POP3 Server Settings</a></li>
+		<li><a href="/documentation/accounts/incoming_webdav.html">WebDAV Server Settings</a></li>
 		<li><a href="/documentation/accounts/view.html">Manage / View</a></li>
 	</ul>
 </div>
