Add link for Import/Export

--- a/_includes/settings-header.html
+++ b/_includes/settings-header.html
@@ -6,5 +6,6 @@
 		<li><a href="/documentation/settings/global.html">Global</a></li>
 		<li><a href="/documentation/settings/account.html">Account</a></li>
 		<li><a href="/documentation/settings/folder.html">Folder</a></li>
+		<li><a href="/documentation/settings/import_export.html">Import/Export</a></li>
 	</ul>
 </div>
