--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,11 +9,12 @@
     <meta name="author" content="">
     <!-- Le styles -->
     <link href="{{site.url}}/assets/css/bootstrap.css" rel="stylesheet">
+    <link href="{{site.url}}/assets/css/bootstrap-responsive.css" rel="stylesheet">
+    <link href="{{site.url}}/assets/css/k9mail.css" rel="stylesheet">
     <style>
       body { padding-top: 60px; /* 60px to make the container go all the way
       to the bottom of the topbar */ }
     </style>
-    <link href="{{site.url}}/assets/css/bootstrap-responsive.css" rel="stylesheet">
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js">
