--- a/_includes/documentation-header.html
+++ b/_includes/documentation-header.html
@@ -11,6 +11,7 @@
 		<li><a href="/documentation/sending.html">Sending E-mail</a></li>
 		<li><a href="/documentation/encryption.html">Encryption</a></li>
 		<li><a href="/documentation/settings.html">Settings</a></li>
+		<li><a href="/documentation/storage.html">Storage</a></li>
 		<li><a href="/documentation/debugging.html">Debugging</a></li>
 	</ul>
 </div>
