Security section changes

--- a/_includes/documentation-header.html
+++ b/_includes/documentation-header.html
@@ -9,7 +9,7 @@
 		<li><a href="/documentation/folders.html">Folders</a></li>
 		<li><a href="/documentation/reading.html">Reading E-mail</a></li>
 		<li><a href="/documentation/sending.html">Sending E-mail</a></li>
-		<li><a href="/documentation/encryption.html">Encryption</a></li>
+		<li><a href="/documentation/security.html">Security</a></li>
 		<li><a href="/documentation/settings.html">Settings</a></li>
 		<li><a href="/documentation/storage.html">Storage</a></li>
 		<li><a href="/documentation/debugging.html">Debugging</a></li>
