--- a/assets/css/k9mail.css
+++ b/assets/css/k9mail.css
@@ -1,4 +1,4 @@
-.documentation-nav, .settings-nav, .accounts-nav, .encryption-nav {
+.documentation-nav, .settings-nav, .accounts-nav, .security-nav {
   clear: right;
   float: right;
   width: 130px;
