--- a/_includes/documentation-header.html
+++ b/_includes/documentation-header.html
@@ -13,5 +13,6 @@
 		<li><a href="/documentation/settings.html">Settings</a></li>
 		<li><a href="/documentation/storage.html">Storage</a></li>
 		<li><a href="/documentation/debugging.html">Debugging</a></li>
+		<li><a href="/documentation/faq.html">FAQ</a></li>
 	</ul>
 </div>
