Removed extra closing tag

--- a/_includes/accounts-header.html
+++ b/_includes/accounts-header.html
@@ -7,6 +7,6 @@
 		<li><a href="/documentation/accounts/incoming_pop3.html">POP3 Settings</a></li>
 		<li><a href="/documentation/accounts/incoming_webdav.html">WebDAV Settings</a></li>
 		<li><a href="/documentation/accounts/view.html">Manage / View</a></li>
-		<li><a href="/documentation/accounts/remove.html">Remove</a></a></li>
+		<li><a href="/documentation/accounts/remove.html">Remove</a></li>
 	</ul>
 </div>
