Expand developer info section with info on IMAP extensions and RFCs

--- a/_includes/development-header.html
+++ b/_includes/development-header.html
@@ -5,6 +5,7 @@
 		<li id="n-mainpage"><a href="/documentation/development.html">Overview</a></li>	
 		<li><a href="/documentation/development/intents.html">Intents</a></li>
 		<li><a href="/documentation/development/contentProviders.html">Content Providers</a></li>
+		<li><a href="/documentation/development/imapExtensions.html">IMAP Capabilities</a></li>
 		<li><a href="/documentation/development/rfcs.html">RFCs</a></li>
 	</ul>
 </div>
