Tweak display of blog post list

--- a/assets/css/k9mail.css
+++ b/assets/css/k9mail.css
@@ -1,3 +1,11 @@
+.post-meta {
+  font-size: small;
+  color: grey;
+  margin-bottom: 0.8em;
+}
+.post-excerpt {
+  margin-bottom: 1em;
+}
 .postedInfo {
   font-size: small;
   color: grey;
