--- a/_includes/header.html
+++ b/_includes/header.html
@@ -43,6 +43,7 @@
     </style>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
     <script src="{{site.url}}/assets/js/bootstrap.js"></script>
+    {% feed_meta %}
   </head>
   <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
