--- a/_includes/header.html
+++ b/_includes/header.html
@@ -52,7 +52,7 @@
     			<a class="brand" href="{{site.url}}/">K-9 Mail</a>
     			<div class="nav-collapse collapse" style="height: 0px;">
     				<ul class="nav">
-{% assign sorted_pages = site.pages | map: 'to_liquid' | sort: 'nav_order' %}
+{% assign sorted_pages = site.html_pages | map: 'to_liquid' | sort: 'nav_order' %}
 {% for node in sorted_pages %}
   {% if node.nav_hide == null %}
     {% if page.url == node.url %}
