First cut at documentation of notifications #32

--- a/_includes/documentation-header.html
+++ b/_includes/documentation-header.html
@@ -9,6 +9,7 @@
 		<li><a href="/documentation/folders.html">Folders</a></li>
 		<li><a href="/documentation/reading.html">Reading E-mail</a></li>
 		<li><a href="/documentation/sending.html">Sending E-mail</a></li>
+		<li><a href="/documentation/notifications.html">Notifications</a></li>
 		<li><a href="/documentation/security.html">Security</a></li>
 		<li><a href="/documentation/settings.html">Settings</a></li>
 		<li><a href="/documentation/storage.html">Storage</a></li>
