Add permissions page - fixes #39

--- a/_includes/documentation-header.html
+++ b/_includes/documentation-header.html
@@ -14,6 +14,7 @@
 		<li><a href="/documentation/settings.html">Settings</a></li>
 		<li><a href="/documentation/storage.html">Storage</a></li>
 		<li><a href="/documentation/widgets.html">Widgets</a></li>
+		<li><a href="/documentation/permissions.html">Permissions</a></li>
 		<li><a href="/documentation/debugging.html">Debugging</a></li>
 		<li><a href="/documentation/development.html">Development</a></li>
 		<li><a href="/documentation/faq.html">FAQ</a></li>
