Adding Code Style section

--- a/_includes/development-header.html
+++ b/_includes/development-header.html
@@ -3,6 +3,7 @@
 	<h5>Development</h5>
 	<ul class="submenu">
 		<li id="n-mainpage"><a href="/documentation/development.html">Overview</a></li>	
+		<li><a href="/documentation/development/codeStyle.html">Code Style</a></li>
 		<li><a href="/documentation/development/intents.html">Intents</a></li>
 		<li><a href="/documentation/development/contentProviders.html">Content Providers</a></li>
 		<li><a href="/documentation/development/imapExtensions.html">IMAP Capabilities</a></li>
