keywords: Add flagsAndKeywords to header

--- a/_includes/development-header.html
+++ b/_includes/development-header.html
@@ -7,5 +7,6 @@
 		<li><a href="/documentation/development/contentProviders.html">Content Providers</a></li>
 		<li><a href="/documentation/development/imapExtensions.html">IMAP Capabilities</a></li>
 		<li><a href="/documentation/development/rfcs.html">RFCs</a></li>
+		<li><a href="/documentation/development/flagsAndKeywords.html">Flags and Keywords</a></li>
 	</ul>
 </div>
