--- a/_includes/documentation-header.html
+++ b/_includes/documentation-header.html
@@ -1,8 +1,8 @@
 
 <div class="documentation-nav">
 	<h5>Documentation</h5>
-	<ul class="submenu">
-		<li id="n-mainpage"><a href="/documentation.html">Overview</a></li>	
+	<ul class="nav nav-pills nav-stacked submenu">
+		<li id="n-mainpage"><a href="/documentation.html">Overview</a></li>
 		<li><a href="/documentation/installation.html">Installation</a></li>
 		<li><a href="/documentation/setup.html">Initial Set-up</a></li>
 		<li><a href="/documentation/accounts.html">Accounts</a></li>
