--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,6 +8,6 @@
 	-->
     </div>
     <!-- /container -->
-
+    <script src="{{site.url}}/assets/js/bootstrap.min.js"></script>
   </body>
 </html>
