--- a/_includes/header.html
+++ b/_includes/header.html
@@ -41,7 +41,7 @@
 
     </style>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="{{site.url}}/assets/js/bootstrap.js"></script>
+    <script src="{{site.url}}/assets/js/bootstrap.min.js"></script>
     {% feed_meta %}
   </head>
   <body>
