--- a/_includes/header_de.html
+++ b/_includes/header_de.html
@@ -52,15 +52,15 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-		      <a class="navbar-brand" href="{{site.url}}/">K-9 Mail</a>
+		      <a class="navbar-brand" href="{{site.url}}/de/">K-9 Mail</a>
           </div>
           <div id="navbar" class="navbar-collapse collapse navbar-right" style="margin-right: 20px">
                 <ul class="nav navbar-nav">
                     <li class="dropdown">
-                        <a href="{{site.url}}/" class="dropdown-toggle"
+                        <a href="{{site.url}}/de/" class="dropdown-toggle"
                           data-toggle="dropdown" role="button" aria-expanded="false">
-                          <img id="imgNavSel" src="{{site.url}}/assets/img/en-GB.gif"
-                              alt="..." class="img-thumbnail icon-small">&nbsp;&nbsp;<span id="lanNavSel">English</span>
+                          <img id="imgNavSel" src="{{site.url}}/assets/img/de.gif"
+                              alt="..." class="img-thumbnail icon-small">&nbsp;&nbsp;<span id="lanNavSel">Deutsch</span>
                           <span class="caret"></span>
                         </a>
                         <ul class="dropdown-menu" role="menu">
@@ -82,7 +82,7 @@
     {% else %}
       <li>
     {% endif %}
-    <a href="{{site.url}}{{node.url}}">{{node.title}}</a></li>
+    <a href="{{site.url}}/de{{node.url}}">{{node.title}}</a></li>
   {% endif %}
 {% endfor %}
     				</ul>
