--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,11 +19,23 @@
       </script>
     <![endif]-->
     <!-- Le fav and touch icons -->
-    <link rel="shortcut icon" href="{{site.url}}/assets/ico/favicon.png">
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{site.url}}/assets/ico/apple-touch-icon-144x144-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="{{site.url}}/assets/ico/apple-touch-icon-114x114-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="{{site.url}}/assets/ico/apple-touch-icon-72x72-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" href="{{site.url}}/assets/ico/apple-touch-icon-57x57-precomposed.png">
+    <link rel="apple-touch-icon" sizes="57x57" href="{{site.url}}/assets/ico/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="{{site.url}}/assets/ico/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="{{site.url}}/assets/ico/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="{{site.url}}/assets/ico/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="{{site.url}}/assets/ico/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="{{site.url}}/assets/ico/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="{{site.url}}/assets/ico/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="{{site.url}}/assets/ico/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="{{site.url}}/assets/ico/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="{{site.url}}/assets/ico/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="{{site.url}}/assets/ico/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="{{site.url}}/assets/ico/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="{{site.url}}/assets/ico/favicon-16x16.png">
+    <link rel="manifest" href="{{site.url}}/assets/ico/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="{{site.url}}/assets/ico/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
     <style>
       .hero-unit {
           text-align: center;
@@ -38,7 +50,6 @@
         padding-top: 60px;
         padding-bottom: 40px;
       }
-
     </style>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="{{site.url}}/assets/js/bootstrap.min.js"></script>
