Reverted docs links and added Twitter social icon

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,9 +4,6 @@
             <div class="small mb-3 mb-lg-0">
                 <a href="/"><img src="{{ "/assets/img/footer-text.svg" | prepend: site.url }}" width="125px" height="auto" /></a>
             </div>
-            <div class="d-flex small align-items-center justify-content-between">
-                <p class="mb-0"><a class="text-slate-40 size-20 underline" href="mailto:info@k9mail.app">info@k9mail.app</a></p>
-            </div>
         </div>
         <hr class="hr-slate-20">
         <div class="row pt-2 mb-4 mb-lg-3 justify-content-between">
@@ -47,6 +44,7 @@
             <div class="col-5 col-lg-2">
                 <h5 class="text-white weight-700 pb-1">Social</h5>
                 <a class="mr-2 text-slate-40" href="https://github.com/k9mail" target="_blank" rel="noopener"><i class="fab fa-github"></i></a>
+                <a class="mr-2 text-slate-40" href="https://twitter.com/k9mail_app" target="_blank" rel="noopener"><i class="fab fa-twitter"></i></a>
             </div>
         </div>
         <div class="d-block d-lg-flex justify-content-between pt-0 pb-3">
