--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -49,7 +49,10 @@
                     </div>
                 </div>
                 <div>
-                        <a class="mr-2 text-slate" href="https://github.com/k9mail" target="_blank" rel="noopener"><i class="fab fa-github"></i></a></p>
+                    <p>
+                        <a class="mr-2 text-slate" href="https://github.com/k9mail" target="_blank" rel="noopener"><i class="fab fa-github"></i></a>
+                        <a class="text-slate" href="https://twitter.com/k9mail_app" target="_blank" rel="noopener"><i class="fab fa-twitter"></i></a>
+                    </p>
                     <p class="small mb-0"><span class="d-block d-xl-inline text-slate mb-1 mb-xl-0 mr-2">&copy; {{ 'now' | date: "%Y" }} K9-Mail</span></p>
                 </div>
             </div>
