--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
     <div class="container pt-3">
         <div class="d-lg-flex justify-content-between align-items-center py-3 py-lg-3">
             <div class="small mb-3 mb-lg-0">
-                <a href="/"><img src="{{ "/assets/img/footer-text.svg" | prepend: site.url }}" width="125px" height="auto" /></a>
+                <a class="text-white weight-700 size-36" href="/">K-9 Mail</a>
             </div>
         </div>
         <hr class="hr-slate-20">
@@ -10,8 +10,8 @@
             <div class="col-5 col-lg-2 mb-3">
                 <h5 class="text-white weight-700">Documentation</h5>
                 <div class="small pt-1">
-                    <div class="mb-2 size-14 weight-400"><a class="text-slate-40" href="/docs"><span>Overview</span></a></div>
-                    <div class="mb-2 size-14 weight-400"><a class="text-slate-40" href="/docs#other-languages"><span>Other Languages</span></a></div>
+                    <div class="mb-2 size-14 weight-400"><a class="text-slate-40" href="/documentation"><span>Overview</span></a></div>
+                    <div class="mb-2 size-14 weight-400"><a class="text-slate-40" href="/documentation#search-input"><span>Search Docs</span></a></div>
                 </div>
             </div>
             <div class="col-5 col-lg-2 mb-3">
