Fix image URLs in social meta elements

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,13 +8,13 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}">
     <meta name="twitter:description" content="{% if page.description %}{{ page.description | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}"> {% if page.image %}
-    <meta property="twitter:image:src" content="{{ page.image }}"> {% else %}
+    <meta property="twitter:image:src" content="{{ page.image | prepend: site.url }}"> {% else %}
     <meta property="twitter:image:src" content="{{ "/assets/img/preview.png" | prepend: site.url }}"> {% endif %}
 
     <!-- Social: Facebook / Open Graph -->
     <meta property="og:url" content="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
     <meta property="og:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}"> {% if page.image %}
-    <meta property="og:image" content="{{ page.image }}"> {% else %}
+    <meta property="og:image" content="{{ page.image | prepend: site.url }}"> {% else %}
     <meta property="og:image" content="{{ "/assets/img/preview.png" | prepend: site.url }}"> {% endif %}
 
     <meta property="og:image:type" content="image/png">
