Add Mastodon Verification

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -45,7 +45,7 @@
                 <h5 class="text-white weight-700 pb-1">Social</h5>
                 <a class="mr-2 text-slate-40" href="https://github.com/k9mail" target="_blank" rel="noopener"><i class="fab fa-github"></i></a>
                 <a class="mr-2 text-slate-40" href="https://twitter.com/k9mail_app" target="_blank" rel="noopener"><i class="fab fa-twitter"></i></a>
-                <a class="mr-2 text-slate-40" href="https://fosstodon.org/@k9mail" target="_blank" rel="noopener"><i class="fab fa-mastodon"></i></a>
+                <a rel="me" class="mr-2 text-slate-40" href="https://fosstodon.org/@k9mail" target="_blank" rel="noopener"><i class="fab fa-mastodon"></i></a>
             </div>
         </div>
         <div class="d-block d-lg-flex justify-content-between pt-0 pb-3">
