Small updates for blog layout and css classes

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,8 +2,8 @@
     <div class="container">
         <div class="row justify-content-between align-items-center py-3">
             <div class="col-12 col-md-7 order-2 order-md-1">
-                <h2 class="text-slate size-42">Advanced Email for Android</h2>
-                <p class="size-20 mb-4 text-slate">K-9 Mail is an open source email client focused on making it easy to chew through large volumes of email.</p>
+                <h2 class="text-main size-42">Advanced Email for Android</h2>
+                <p class="size-20 mb-4 text-main">K-9 Mail is an open source email client focused on making it easy to chew through large volumes of email.</p>
                 <div class="row align-items-center">
                     <div class="col-12 col-md-6 full-width-md"><a href="/download" class="hero">Download <i class="fas fa-arrow-right pl-1"></i></a></div>
                     <div class="col-12 col-md-6 full-width-md margin-negative"><a class="action" href="/contribute">Contribute <i class="fas fa-arrow-right pl-1"></i></a></div>
