--- a/_sass/_colors.scss
+++ b/_sass/_colors.scss
@@ -5,6 +5,11 @@ $gradient-teal-2: linear-gradient(180deg, #6CD9D2 0%, #28A199 100%);
 $gradient-slate-2: linear-gradient(180deg, #1D2830 0%, #243947 100%);
 $gradient-slate-3: linear-gradient(180deg, #243947 0%, #2D4D63 100%);
 
+// Other colors
+
+$main: #4b5a6b;
+$secondary: #688391;
+
 // Magenta
 
 $magenta-list: (
