--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,7 +9,7 @@ layout: page
     <div class="row justify-content-center">
 <div class="col-md-8 col-sm-12">
   <div class="pt-0">
-            <h2 class="text-slate pt-0 mt-0 mb-1">{{ page.title }}</h2>
+            <h2 class="text-main pt-0 mt-0 mb-1">{{ page.title }}</h2>
             {% assign words = page.content | number_of_words %}
             {% if words < 360 %}
             <p class="body-10-bold gray-700">1 min read</p>
@@ -50,7 +50,7 @@ layout: page
                 <div class="col-md-2 col-sm-12">
                 </div>
                  <div class="col-md-9">
-                  <a class="text-slate underline size-18" href='{{ page.previous.url | replace:'.html','' }}'>{{ page.previous.title }}</a>
+                  <a class="text-main underline size-18" href='{{ page.previous.url | replace:'.html','' }}'>{{ page.previous.title }}</a>
                 </div>
               </div>
                 {% endif %}
@@ -64,7 +64,7 @@ layout: page
                 <div class="col-md-2 col-sm-12">
                 </div>
                 <div class="col-md-9">
-                  <a class="text-slate underline size-18" href='{{ page.next.url | replace:'.html','' }}'>{{ page.next.title }}</a>
+                  <a class="text-main underline size-18" href='{{ page.next.url | replace:'.html','' }}'>{{ page.next.title }}</a>
                 </div>
               </div>
                 {% endif %}
