Fixed navbar color mobile view

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -27,8 +27,8 @@
             </div>
             <div class="col-1 d-lg-none text-right px-0"></div>
         </div>
-        <div class="navbar-side background-teal-20" id="headers-4-sidebar">
-            <div class="navbar-side-content background-teal-20 d-flex flex-column justify-content-between">
+        <div class="navbar-side background" id="headers-4-sidebar">
+            <div class="navbar-side-content background d-flex flex-column justify-content-between">
                 <div class="weight-700">
                     <a class="navbar-side-close mb-4" href="" data-id="headers-4-sidebar-close"><img src="{{ "/assets/img/glyphs/close.svg" | prepend: site.url }}" width="32" /></a>
                     <div class="navbar-nav">
