Fix breadcrumb links

--- a/_includes/breadcrumbs.html
+++ b/_includes/breadcrumbs.html
@@ -5,7 +5,7 @@
       {% if forloop.last %}
         / {{ page.title }}
       {% else %}
-        / <a href="{% assign crumb_limit = forloop.index | plus: 1 %}{% for crumb in crumbs limit: crumb_limit %}{{ crumb | append: '/' | replace:'without-plugin/','without-plugins/' }}{% endfor %}">{{ crumb | replace:'-',' ' | remove:'.html' | capitalize }}</a>
+        / <a href="{% assign crumb_limit = forloop.index %}{% for crumb in crumbs offset: 1 limit: crumb_limit %}/{{ crumb }}{% endfor %}">{{ crumb | replace:'-',' ' | remove:'.html' | capitalize }}</a>
       {% endif %}
     {% endfor %}
 </div>
